# AI-platform-generator

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
docs/: ai-generation-service-api.md  platform-hermes-interaction-interfaces.md
services/ai_generation_service/: Dockerfile  README.md  pyproject.toml
services/ai_generation_service/app/: __init__.py  main.py
