[project]
name = "ai-generation-service"
version = "0.1.0"
description = "Standalone AI generation, Hermes orchestration, skill, and task-state bridge service for ff-ai-platform."
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[standard]>=0.114.2,<1.0.0",
    "httpx>=0.25.1,<1.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.2.1,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
